concord_macros/tests/trybuild/fail/sema/policy/unknown_behavior_use.stderr
error: unknown behavior `missing`
  --> tests/trybuild/fail/sema/policy/unknown_behavior_use.rs:10:18
   |
10 |         behavior missing
   |                  ^^^^^^^
